Konta:
t "/register" >>> "/auth/register" - rejestruje - 
t "/admin" >>> "/auth/admin" - sprawdza czy uzytkownik jest adminem - 
t "/check-auth" >>> "/auth/user" - poprawic controlery i w frondendzie zeby było podobne do admina
t "/login" >>> "/auth/login" - loguje
t "/logout" >>> "/auth/logout" - wylogowje
t "/account-data" >>> "/auth/information" - trzeba to ulepszyc bo jezeli uzytniwk przejdzie autoryzacje tokenu to moze dostac inforamcje o jakimkolwiek uzytkowniku
t "/account-update" >>> "/auth/update" - uzytkownik aktualizwouje SWOJE dane
t "/delete-account" >>> /auth/delete" - uzytkownik usuwa swoje konto

Słowa:
t "/pre-data" >>> "/word/information"
t "/data" >>> "/word/data"
t "/words" >>> "/word/list"
t "/word-detail" >>> "/word/detail"
t "/word-update" >>> "/word/update"
t "/search" >>> "/word/search"
t "/add-word" >>> "/word/add"
t /word-delete", >>> "/word/delete" ---- nie ma tego?


Reporty
t "/data-reports" >>> "/report/data"
t "/detail-report" >>> "/report/details"
t "/detail-update" >>> "/report/update"
t "/detail-delete" >>> "/report/delete:id" - zmienic sposób wysyłania w front na :id
t "/report" >>> "/report/add" - zwykły dziala ale nie word


Tylko dla Admina:
t "/global-data" >>> "/admin/global-data - generuje statystki wyswietlajace sie w panelu admina
"/generate-patches" "/admin/generatepatch - generuje losowe liczby na serwerze w zakresie liczby słów 

Działania dla uzytnikikach
t "/users" >>> "/user/list" - zwraca liste uzytkowników z jego paraemtrami 
t "/users-update" >>> "/user/update - updatuje dane wybranego uzytkownika
t "/search-user" >>> "/user/search" - wyszuwiarka w panelu admina
t /user/delete