@@ -36,3 +36,6 @@ t "/users" >>> "/user/list" - zwraca liste uzytkowników z jego paraemtrami
 t "/users-update" >>> "/user/update - updatuje dane wybranego uzytkownika
 t "/search-user" >>> "/user/search" - wyszuwiarka w panelu admina
 t /user/delete
+
+do zrobienia,
+Możesz stworzyć kontekst lub hook, który będzie zarządzał powiadomieniami w całej aplikacji. Dzięki temu nie musisz przekazywać stanu popup i funkcji setPopup do każdego komponentu.
